style.css
/* ... */
/* --- MOBILE NAVIGATION --- */
.mobile-nav-toggle {
    display: none;
}



/* === Responsiveness: Laptop with MDPI Display === */
@media only screen and (max-width: 1280px) {
    .header .container {
        padding: 10px 2%;
    }

    .header .grid {
        grid-template-columns: 25% 1fr;
    }
}



/* === Responsiveness: Mobile === */
@media only screen and (max-width: 767px) {
    .main-menu {
        position: fixed;
        z-index: 1000;
        inset: 0 0 0 0%;
        padding: min(30vh, 10rem) 2rem;
        
        background: hsl(0 0% 50% / 0.1);
        backdrop-filter: blur(1rem);
        -webkit-backdrop-filter: blur(1rem);

        transform: translateX(100%);
        transition: transform 350ms ease-out;
    }

    .main-menu.flex {
        flex-flow: column nowrap;
        justify-content: center;
        align-items: center;
        row-gap: 50px;
        --gap: 2em;
    }

    .main-menu[data-visible="true"] {
        transform: translateX(0%);
    }

    .menu-item__link [aria-hidden="true"]  {
        display: none;
    }

    .mobile-nav-toggle {
        display: block;
        position: absolute;
        top: 3rem;
        right: clamp(1.5rem, 2rem, 2.5rem);
        width: 1.25rem;
        aspect-ratio: 1;
        border: 0;
        background: transparent;
        background-image: url("svg/bars-solid.svg.svg");
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
        cursor: pointer;
        z-index: 9999;
    }

    .mobile-nav-toggle[aria-expanded="true"] {
        position: fixed;
        right: clamp(2rem, 3rem, 3rem);
        background-image: url("svg/xmark-solid.svg.svg");
    }

    .menu-item__link {
        font-size: 32px;
        padding: 12px 16px 12px 10px;
        text-shadow: 0 0 10px rgba(0,0,0,.2);
    }

    .menu-item__link:hover {
        text-shadow: 0 0 0px rgba(0,0,0,0);
    }
}



/* ========= HERO SECTION CSS ========= */
.hero-section {
    height: clamp(600px, 100vh, 100vh);
    padding: 120px 0px;
    background: #7f978c;
    background-image: url("images/hero-section__background-image--no-subject.jpg");
    background-position: center center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-section.flex {
    justify-content: center;
    align-items: center;
}

.hero-section::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: linear-gradient(
        180deg,
        rgba(255,255,255,0) 50%,
        rgba(255,255,255,1) 100%
    );
}

.hero-section .container {
    top: 0px;
}

.hero-section .grid {
    grid-template-columns: 1fr 25%;
    grid-template-rows: 1fr;
}

.hero-section__sub-text {
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    font-weight: 400;
    text-transform: uppercase;
    line-height: 1em;
    word-spacing: 3px;
    position: relative;
    padding: 5px 10px;
    box-shadow: 0px 0px 15px #00000066;
    background-color: rgba(255,255,255,.85);
    mix-blend-mode: screen;
}

.hero-section__sub-text::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: -21px;
    height: 100%;
    width: 21px;
    clip-path: polygon(0 0, 0% 100%, 50% 50%);
    background-color: rgba(255,255,255,.85);
}

.hero-section__sub-text::after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: -31px;
    height: 100%;
    width: 21px;
    clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0 100%, 50% 50%);
    background-color: rgba(255,255,255,.85);
}

.hero-section__main-text {
    font-family: "Teko", sans-serif;
    font-size: 136px;
    font-weight: 700;
    text-transform: uppercase;
    text-shadow: 0px 0px 15px #00000066;
    color: #e2c4a2;
    mix-blend-mode: overlay;
    filter: brightness(110%) contrast(200%);
}

.hero-section .spacer {
    height: 100%;
}



/* === Responsiveness: Tablet === */
@media only screen and (max-width: 1024px) {
    .hero-section {
        background-position: 75% 50%;
        height: clamp(600px, 75vh, 100vh);
    }

    .hero-section::before {
        background-image: linear-gradient(
            180deg,
            rgba(255,255,255,0) 75%,
            rgba(255,255,255,1) 100%);
    }

    .hero-section .grid {
        grid-template-columns: 1fr;
    }

    .hero-section__main-text {
        font-size: 124px;
    }

    .hero-section .col:last-child {
        display: none;
    }
}



/* === Responsiveness: Mobile === */
@media only screen and (max-width: 767px) {
    .hero-section {
        background-position: 100% 50%;
        background-attachment: scroll;
        padding-bottom: 60px;
        height: clamp(600px, 70vh, 100vh);
    }

    .hero-section .container {
        padding-top: 0px;
    }

    .hero-section__sub-text {
        font-size: clamp(14px, 2.5vw, 18px);
    }

    .hero-section__main-text {
        font-size: clamp(1rem, 15vw, 100vw);
    }
}



/* === Responsiveness: screen sizes < 428px === */
@media only screen and (max-width: 428px) {
    .hero-section {
        height: clamp(550px, 72vh, 100vh);
        background-position: 100% 50%;
        background-attachment: scroll;
        padding-bottom: 60px;
    }

    .hero-section__sub-text {
        font-size: clamp(14px, 2.5vw, 100vw);
        margin-right: 31px;
    }

    .hero-section__main-text {
        font-size: clamp(1rem, 13vw, 100vw);
    }
}



/* ========= SECTION DIVIDER: CLOUDS CSS ========= */
.section-divider__clouds {
    margin-top: -340px;
    background-image: url("images/clouds.png");
    background-position: top right;
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-size: cover;
}

.section-divider__clouds--flipped {
    background-image: url("images/clouds--flipped-x.png");
}
/* ... */

